lea.init.output
State 131 conflicts: 12 shift/reduce
State 133 conflicts: 12 shift/reduce
State 164 conflicts: 12 shift/reduce
State 165 conflicts: 12 shift/reduce
State 166 conflicts: 12 shift/reduce
State 167 conflicts: 12 shift/reduce
State 168 conflicts: 12 shift/reduce
State 169 conflicts: 12 shift/reduce
State 170 conflicts: 12 shift/reduce
State 171 conflicts: 12 shift/reduce
State 172 conflicts: 12 shift/reduce
State 173 conflicts: 12 shift/reduce
State 174 conflicts: 12 shift/reduce
State 175 conflicts: 12 shift/reduce
State 176 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 program: type_declaration_part variable_declaration_part procedure_and_function_definition_part TOKEN_BEGIN statement_part TOKEN_END

    2 type_declaration_part: TOKEN_TYPE type_declaration_list
    3                      | %empty

    4 type_declaration_list: type_declaration_list type_declaration
    5                      | type_declaration

    6 type_declaration: IDENTIFIER '=' type ';'

    7 variable_declaration_part: TOKEN_VAR variable_declaration_list
    8                          | %empty

    9 variable_declaration_list: variable_declaration_list variable_declaration
   10                          | variable_declaration

   11 variable_declaration: identifier_list ':' type ';'

   12 identifier_list: identifier_list ',' IDENTIFIER
   13                | IDENTIFIER

   14 type: simple_type
   15     | named_type
   16     | index_type
   17     | structured_type
   18     | pointer_type

   19 simple_type: TOKEN_CHARACTER
   20            | TOKEN_BOOLEAN
   21            | TOKEN_INTEGER

   22 named_type: IDENTIFIER

   23 index_type: enumerated_type
   24           | subrange_type

   25 enumerated_type: '(' enumerated_type_list ')'

   26 enumerated_type_list: enumerated_type_list ',' enumerated_type_arg
   27                     | enumerated_type_arg

   28 enumerated_type_arg: IDENTIFIER

   29 subrange_type: constant TOKEN_DOTDOT constant

   30 constant: INTEGER
   31         | IDENTIFIER

   32 structured_type: array_type

   33 array_type: TOKEN_ARRAY '[' range_type ']' TOKEN_OF type

   34 range_type: subrange_type
   35           | named_type

   36 pointer_type: '^' type

   37 procedure_and_function_definition_part: procedure_and_function_definition_list
   38                                       | %empty

   39 procedure_and_function_definition_list: procedure_and_function_definition_list procedure_and_function_definition
   40                                       | procedure_and_function_definition

   41 procedure_and_function_definition: procedure_and_function_definition_head variable_declaration_part block
   42                                  | procedure_and_function_definition_head ';'

   43 block: TOKEN_BEGIN statement_part TOKEN_END

   44 procedure_and_function_definition_head: TOKEN_PROCEDURE IDENTIFIER '(' argt_part ')'
   45                                       | TOKEN_FUNCTION IDENTIFIER '(' argt_part ')' ':' type

   46 argt_part: argt_list
   47          | %empty

   48 argt_list: argt_list ',' argt
   49          | argt

   50 argt: IDENTIFIER ':' type

   51 statement_part: statement_list
   52               | %empty

   53 statement_list: statement_list statement
   54               | statement

   55 statement: simple_statement
   56          | structured_statement

   57 simple_statement: assignment_statement
   58                 | procedure_expression ';'
   59                 | TOKEN_NEW '(' variable_access ')' ';'
   60                 | TOKEN_DISPOSE '(' variable_access ')' ';'
   61                 | TOKEN_RETURN '(' expression ')' ';'
   62                 | print_statement

   63 assignment_statement: variable_access TOKEN_AFF expression ';'

   64 procedure_expression: IDENTIFIER '(' expression_part ')'

   65 expression_part: expression_list
   66                | %empty

   67 expression_list: expression_list ',' expression
   68                | expression

   69 print_statement: TOKEN_PRINT '(' expression ')' ';'
   70                | TOKEN_PRINTLN '(' expression ')' ';'

   71 structured_statement: block
   72                     | if_statement
   73                     | while_statement

   74 if_statement: TOKEN_IF expression TOKEN_THEN statement
   75             | TOKEN_IF expression TOKEN_THEN statement TOKEN_ELSE statement

   76 while_statement: TOKEN_WHILE expression TOKEN_DO statement

   77 variable_access: IDENTIFIER
   78                | indexed_variable
   79                | variable_access '^'

   80 indexed_variable: variable_access '[' expression ']'

   81 expression: variable_access
   82           | expression '+' expression
   83           | expression '*' expression
   84           | expression '-' expression
   85           | expression '/' expression
   86           | expression TOKEN_OR expression
   87           | expression TOKEN_AND expression
   88           | '-' expression
   89           | '!' expression
   90           | expression '<' expression
   91           | expression TOKEN_LE expression
   92           | expression '>' expression
   93           | expression TOKEN_GE expression
   94           | expression '=' expression
   95           | expression TOKEN_NE expression
   96           | '(' expression ')'
   97           | procedure_expression
   98           | procedure_expression '^'
   99           | literal

  100 literal: INTEGER
  101        | CHARACTER
  102        | TOKEN_TRUE
  103        | TOKEN_FALSE
  104        | TOKEN_NULL


Terminals, with rules where they appear

$end (0) 0
'!' (33) 89
'(' (40) 25 44 45 59 60 61 64 69 70 96
')' (41) 25 44 45 59 60 61 64 69 70 96
'*' (42) 83
'+' (43) 82
',' (44) 12 26 48 67
'-' (45) 84 88
'/' (47) 85
':' (58) 11 45 50
';' (59) 6 11 42 58 59 60 61 63 69 70
'<' (60) 90
'=' (61) 6 94
'>' (62) 92
'[' (91) 33 80
']' (93) 33 80
'^' (94) 36 79 98
error (256)
TOKEN_AFF (258) 63
TOKEN_AND (259) 87
TOKEN_ARRAY (260) 33
TOKEN_BEGIN (261) 1 43
TOKEN_CHARACTER (262) 19
TOKEN_DISPOSE (263) 60
TOKEN_DO (264) 76
TOKEN_DOTDOT (265) 29
TOKEN_ELSE (266) 75
TOKEN_END (267) 1 43
TOKEN_FALSE (268) 103
TOKEN_FUNCTION (269) 45
TOKEN_GE (270) 93
TOKEN_IF (271) 74 75
TOKEN_LE (272) 91
TOKEN_NEW (273) 59
TOKEN_NE (274) 95
TOKEN_NULL (275) 104
TOKEN_OF (276) 33
TOKEN_OR (277) 86
TOKEN_PRINT (278) 69
TOKEN_PRINTLN (279) 70
TOKEN_PROCEDURE (280) 44
TOKEN_THEN (281) 74 75
TOKEN_TYPE (282) 2
TOKEN_BOOLEAN (283) 20
TOKEN_INTEGER (284) 21
TOKEN_RETURN (285) 61
TOKEN_TRUE (286) 102
TOKEN_VAR (287) 7
TOKEN_WHILE (288) 76
IDENTIFIER (289) 6 12 13 22 28 31 44 45 50 64 77
CHARACTER (290) 101
INTEGER (291) 30 100


Nonterminals, with rules where they appear

$accept (53)
    on left: 0
program (54)
    on left: 1, on right: 0
type_declaration_part (55)
    on left: 2 3, on right: 1
type_declaration_list (56)
    on left: 4 5, on right: 2 4
type_declaration (57)
    on left: 6, on right: 4 5
variable_declaration_part (58)
    on left: 7 8, on right: 1 41
variable_declaration_list (59)
    on left: 9 10, on right: 7 9
variable_declaration (60)
    on left: 11, on right: 9 10
identifier_list (61)
    on left: 12 13, on right: 11 12
type (62)
    on left: 14 15 16 17 18, on right: 6 11 33 36 45 50
simple_type (63)
    on left: 19 20 21, on right: 14
named_type (64)
    on left: 22, on right: 15 35
index_type (65)
    on left: 23 24, on right: 16
enumerated_type (66)
    on left: 25, on right: 23
enumerated_type_list (67)
    on left: 26 27, on right: 25 26
enumerated_type_arg (68)
    on left: 28, on right: 26 27
subrange_type (69)
    on left: 29, on right: 24 34
constant (70)
    on left: 30 31, on right: 29
structured_type (71)
    on left: 32, on right: 17
array_type (72)
    on left: 33, on right: 32
range_type (73)
    on left: 34 35, on right: 33
pointer_type (74)
    on left: 36, on right: 18
procedure_and_function_definition_part (75)
    on left: 37 38, on right: 1
procedure_and_function_definition_list (76)
    on left: 39 40, on right: 37 39
procedure_and_function_definition (77)
    on left: 41 42, on right: 39 40
block (78)
    on left: 43, on right: 41 71
procedure_and_function_definition_head (79)
    on left: 44 45, on right: 41 42
argt_part (80)
    on left: 46 47, on right: 44 45
argt_list (81)
    on left: 48 49, on right: 46 48
argt (82)
    on left: 50, on right: 48 49
statement_part (83)
    on left: 51 52, on right: 1 43
statement_list (84)
    on left: 53 54, on right: 51 53
statement (85)
    on left: 55 56, on right: 53 54 74 75 76
simple_statement (86)
    on left: 57 58 59 60 61 62, on right: 55
assignment_statement (87)
    on left: 63, on right: 57
procedure_expression (88)
    on left: 64, on right: 58 97 98
expression_part (89)
    on left: 65 66, on right: 64
expression_list (90)
    on left: 67 68, on right: 65 67
print_statement (91)
    on left: 69 70, on right: 62
structured_statement (92)
    on left: 71 72 73, on right: 56
if_statement (93)
    on left: 74 75, on right: 72
while_statement (94)
    on left: 76, on right: 73
variable_access (95)
    on left: 77 78 79, on right: 59 60 63 79 80 81
indexed_variable (96)
    on left: 80, on right: 78
expression (97)
    on left: 81 82 83 84 85 86 87 88 89 90 91 92 93 94 95 96 97 98
    99, on right: 61 63 67 68 69 70 74 75 76 80 82 83 84 85 86 87 88
    89 90 91 92 93 94 95 96
literal (98)
    on left: 100 101 102 103 104, on right: 99


State 0

    0 $accept: . program $end

    TOKEN_TYPE  shift, and go to state 1

    $default  reduce using rule 3 (type_declaration_part)

    program                go to state 2
    type_declaration_part  go to state 3


State 1

    2 type_declaration_part: TOKEN_TYPE . type_declaration_list

    IDENTIFIER  shift, and go to state 4

    type_declaration_list  go to state 5
    type_declaration       go to state 6


State 2

    0 $accept: program . $end

    $end  shift, and go to state 7


State 3

    1 program: type_declaration_part . variable_declaration_part procedure_and_function_definition_part TOKEN_BEGIN statement_part TOKEN_END

    TOKEN_VAR  shift, and go to state 8

    $default  reduce using rule 8 (variable_declaration_part)

    variable_declaration_part  go to state 9


State 4

    6 type_declaration: IDENTIFIER . '=' type ';'

    '='  shift, and go to state 10


State 5

    2 type_declaration_part: TOKEN_TYPE type_declaration_list .
    4 type_declaration_list: type_declaration_list . type_declaration

    IDENTIFIER  shift, and go to state 4

    $default  reduce using rule 2 (type_declaration_part)

    type_declaration  go to state 11


State 6

    5 type_declaration_list: type_declaration .

    $default  reduce using rule 5 (type_declaration_list)


State 7

    0 $accept: program $end .

    $default  accept


State 8

    7 variable_declaration_part: TOKEN_VAR . variable_declaration_list

    IDENTIFIER  shift, and go to state 12

    variable_declaration_list  go to state 13
    variable_declaration       go to state 14
    identifier_list            go to state 15


State 9

    1 program: type_declaration_part variable_declaration_part . procedure_and_function_definition_part TOKEN_BEGIN statement_part TOKEN_END

    TOKEN_FUNCTION   shift, and go to state 16
    TOKEN_PROCEDURE  shift, and go to state 17

    $default  reduce using rule 38 (procedure_and_function_definition_part)

    procedure_and_function_definition_part  go to state 18
    procedure_and_function_definition_list  go to state 19
    procedure_and_function_definition       go to state 20
    procedure_and_function_definition_head  go to state 21


State 10

    6 type_declaration: IDENTIFIER '=' . type ';'

    '('              shift, and go to state 22
    '^'              shift, and go to state 23
    TOKEN_ARRAY      shift, and go to state 24
    TOKEN_CHARACTER  shift, and go to state 25
    TOKEN_BOOLEAN    shift, and go to state 26
    TOKEN_INTEGER    shift, and go to state 27
    IDENTIFIER       shift, and go to state 28
    INTEGER          shift, and go to state 29

    type             go to state 30
    simple_type      go to state 31
    named_type       go to state 32
    index_type       go to state 33
    enumerated_type  go to state 34
    subrange_type    go to state 35
    constant         go to state 36
    structured_type  go to state 37
    array_type       go to state 38
    pointer_type     go to state 39


State 11

    4 type_declaration_list: type_declaration_list type_declaration .

    $default  reduce using rule 4 (type_declaration_list)


State 12

   13 identifier_list: IDENTIFIER .

    $default  reduce using rule 13 (identifier_list)


State 13

    7 variable_declaration_part: TOKEN_VAR variable_declaration_list .
    9 variable_declaration_list: variable_declaration_list . variable_declaration

    IDENTIFIER  shift, and go to state 12

    $default  reduce using rule 7 (variable_declaration_part)

    variable_declaration  go to state 40
    identifier_list       go to state 15


State 14

   10 variable_declaration_list: variable_declaration .

    $default  reduce using rule 10 (variable_declaration_list)


State 15

   11 variable_declaration: identifier_list . ':' type ';'
   12 identifier_list: identifier_list . ',' IDENTIFIER

    ','  shift, and go to state 41
    ':'  shift, and go to state 42


State 16

   45 procedure_and_function_definition_head: TOKEN_FUNCTION . IDENTIFIER '(' argt_part ')' ':' type

    IDENTIFIER  shift, and go to state 43


State 17

   44 procedure_and_function_definition_head: TOKEN_PROCEDURE . IDENTIFIER '(' argt_part ')'

    IDENTIFIER  shift, and go to state 44


State 18

    1 program: type_declaration_part variable_declaration_part procedure_and_function_definition_part . TOKEN_BEGIN statement_part TOKEN_END

    TOKEN_BEGIN  shift, and go to state 45


State 19

   37 procedure_and_function_definition_part: procedure_and_function_definition_list .
   39 procedure_and_function_definition_list: procedure_and_function_definition_list . procedure_and_function_definition

    TOKEN_FUNCTION   shift, and go to state 16
    TOKEN_PROCEDURE  shift, and go to state 17

    $default  reduce using rule 37 (procedure_and_function_definition_part)

    procedure_and_function_definition       go to state 46
    procedure_and_function_definition_head  go to state 21


State 20

   40 procedure_and_function_definition_list: procedure_and_function_definition .

    $default  reduce using rule 40 (procedure_and_function_definition_list)


State 21

   41 procedure_and_function_definition: procedure_and_function_definition_head . variable_declaration_part block
   42                                  | procedure_and_function_definition_head . ';'

    ';'        shift, and go to state 47
    TOKEN_VAR  shift, and go to state 8

    $default  reduce using rule 8 (variable_declaration_part)

    variable_declaration_part  go to state 48


State 22

   25 enumerated_type: '(' . enumerated_type_list ')'

    IDENTIFIER  shift, and go to state 49

    enumerated_type_list  go to state 50
    enumerated_type_arg   go to state 51


State 23

   36 pointer_type: '^' . type

    '('              shift, and go to state 22
    '^'              shift, and go to state 23
    TOKEN_ARRAY      shift, and go to state 24
    TOKEN_CHARACTER  shift, and go to state 25
    TOKEN_BOOLEAN    shift, and go to state 26
    TOKEN_INTEGER    shift, and go to state 27
    IDENTIFIER       shift, and go to state 28
    INTEGER          shift, and go to state 29

    type             go to state 52
    simple_type      go to state 31
    named_type       go to state 32
    index_type       go to state 33
    enumerated_type  go to state 34
    subrange_type    go to state 35
    constant         go to state 36
    structured_type  go to state 37
    array_type       go to state 38
    pointer_type     go to state 39


State 24

   33 array_type: TOKEN_ARRAY . '[' range_type ']' TOKEN_OF type

    '['  shift, and go to state 53


State 25

   19 simple_type: TOKEN_CHARACTER .

    $default  reduce using rule 19 (simple_type)


State 26

   20 simple_type: TOKEN_BOOLEAN .

    $default  reduce using rule 20 (simple_type)


State 27

   21 simple_type: TOKEN_INTEGER .

    $default  reduce using rule 21 (simple_type)


State 28

   22 named_type: IDENTIFIER .
   31 constant: IDENTIFIER .

    TOKEN_DOTDOT  reduce using rule 31 (constant)
    $default      reduce using rule 22 (named_type)


State 29

   30 constant: INTEGER .

    $default  reduce using rule 30 (constant)


State 30

    6 type_declaration: IDENTIFIER '=' type . ';'

    ';'  shift, and go to state 54


State 31

   14 type: simple_type .

    $default  reduce using rule 14 (type)


State 32

   15 type: named_type .

    $default  reduce using rule 15 (type)


State 33

   16 type: index_type .

    $default  reduce using rule 16 (type)


State 34

   23 index_type: enumerated_type .

    $default  reduce using rule 23 (index_type)


State 35

   24 index_type: subrange_type .

    $default  reduce using rule 24 (index_type)


State 36

   29 subrange_type: constant . TOKEN_DOTDOT constant

    TOKEN_DOTDOT  shift, and go to state 55


State 37

   17 type: structured_type .

    $default  reduce using rule 17 (type)


State 38

   32 structured_type: array_type .

    $default  reduce using rule 32 (structured_type)


State 39

   18 type: pointer_type .

    $default  reduce using rule 18 (type)


State 40

    9 variable_declaration_list: variable_declaration_list variable_declaration .

    $default  reduce using rule 9 (variable_declaration_list)


State 41

   12 identifier_list: identifier_list ',' . IDENTIFIER

    IDENTIFIER  shift, and go to state 56


State 42

   11 variable_declaration: identifier_list ':' . type ';'

    '('              shift, and go to state 22
    '^'              shift, and go to state 23
    TOKEN_ARRAY      shift, and go to state 24
    TOKEN_CHARACTER  shift, and go to state 25
    TOKEN_BOOLEAN    shift, and go to state 26
    TOKEN_INTEGER    shift, and go to state 27
    IDENTIFIER       shift, and go to state 28
    INTEGER          shift, and go to state 29

    type             go to state 57
    simple_type      go to state 31
    named_type       go to state 32
    index_type       go to state 33
    enumerated_type  go to state 34
    subrange_type    go to state 35
    constant         go to state 36
    structured_type  go to state 37
    array_type       go to state 38
    pointer_type     go to state 39


State 43

   45 procedure_and_function_definition_head: TOKEN_FUNCTION IDENTIFIER . '(' argt_part ')' ':' type

    '('  shift, and go to state 58


State 44

   44 procedure_and_function_definition_head: TOKEN_PROCEDURE IDENTIFIER . '(' argt_part ')'

    '('  shift, and go to state 59


State 45

    1 program: type_declaration_part variable_declaration_part procedure_and_function_definition_part TOKEN_BEGIN . statement_part TOKEN_END

    TOKEN_BEGIN    shift, and go to state 60
    TOKEN_DISPOSE  shift, and go to state 61
    TOKEN_IF       shift, and go to state 62
    TOKEN_NEW      shift, and go to state 63
    TOKEN_PRINT    shift, and go to state 64
    TOKEN_PRINTLN  shift, and go to state 65
    TOKEN_RETURN   shift, and go to state 66
    TOKEN_WHILE    shift, and go to state 67
    IDENTIFIER     shift, and go to state 68

    $default  reduce using rule 52 (statement_part)

    block                 go to state 69
    statement_part        go to state 70
    statement_list        go to state 71
    statement             go to state 72
    simple_statement      go to state 73
    assignment_statement  go to state 74
    procedure_expression  go to state 75
    print_statement       go to state 76
    structured_statement  go to state 77
    if_statement          go to state 78
    while_statement       go to state 79
    variable_access       go to state 80
    indexed_variable      go to state 81


State 46

   39 procedure_and_function_definition_list: procedure_and_function_definition_list procedure_and_function_definition .

    $default  reduce using rule 39 (procedure_and_function_definition_list)


State 47

   42 procedure_and_function_definition: procedure_and_function_definition_head ';' .

    $default  reduce using rule 42 (procedure_and_function_definition)


State 48

   41 procedure_and_function_definition: procedure_and_function_definition_head variable_declaration_part . block

    TOKEN_BEGIN  shift, and go to state 60

    block  go to state 82


State 49

   28 enumerated_type_arg: IDENTIFIER .

    $default  reduce using rule 28 (enumerated_type_arg)


State 50

   25 enumerated_type: '(' enumerated_type_list . ')'
   26 enumerated_type_list: enumerated_type_list . ',' enumerated_type_arg

    ')'  shift, and go to state 83
    ','  shift, and go to state 84


State 51

   27 enumerated_type_list: enumerated_type_arg .

    $default  reduce using rule 27 (enumerated_type_list)


State 52

   36 pointer_type: '^' type .

    $default  reduce using rule 36 (pointer_type)


State 53

   33 array_type: TOKEN_ARRAY '[' . range_type ']' TOKEN_OF type

    IDENTIFIER  shift, and go to state 28
    INTEGER     shift, and go to state 29

    named_type     go to state 85
    subrange_type  go to state 86
    constant       go to state 36
    range_type     go to state 87


State 54

    6 type_declaration: IDENTIFIER '=' type ';' .

    $default  reduce using rule 6 (type_declaration)


State 55

   29 subrange_type: constant TOKEN_DOTDOT . constant

    IDENTIFIER  shift, and go to state 88
    INTEGER     shift, and go to state 29

    constant  go to state 89


State 56

   12 identifier_list: identifier_list ',' IDENTIFIER .

    $default  reduce using rule 12 (identifier_list)


State 57

   11 variable_declaration: identifier_list ':' type . ';'

    ';'  shift, and go to state 90


State 58

   45 procedure_and_function_definition_head: TOKEN_FUNCTION IDENTIFIER '(' . argt_part ')' ':' type

    IDENTIFIER  shift, and go to state 91

    $default  reduce using rule 47 (argt_part)

    argt_part  go to state 92
    argt_list  go to state 93
    argt       go to state 94


State 59

   44 procedure_and_function_definition_head: TOKEN_PROCEDURE IDENTIFIER '(' . argt_part ')'

    IDENTIFIER  shift, and go to state 91

    $default  reduce using rule 47 (argt_part)

    argt_part  go to state 95
    argt_list  go to state 93
    argt       go to state 94


State 60

   43 block: TOKEN_BEGIN . statement_part TOKEN_END

    TOKEN_BEGIN    shift, and go to state 60
    TOKEN_DISPOSE  shift, and go to state 61
    TOKEN_IF       shift, and go to state 62
    TOKEN_NEW      shift, and go to state 63
    TOKEN_PRINT    shift, and go to state 64
    TOKEN_PRINTLN  shift, and go to state 65
    TOKEN_RETURN   shift, and go to state 66
    TOKEN_WHILE    shift, and go to state 67
    IDENTIFIER     shift, and go to state 68

    $default  reduce using rule 52 (statement_part)

    block                 go to state 69
    statement_part        go to state 96
    statement_list        go to state 71
    statement             go to state 72
    simple_statement      go to state 73
    assignment_statement  go to state 74
    procedure_expression  go to state 75
    print_statement       go to state 76
    structured_statement  go to state 77
    if_statement          go to state 78
    while_statement       go to state 79
    variable_access       go to state 80
    indexed_variable      go to state 81


State 61

   60 simple_statement: TOKEN_DISPOSE . '(' variable_access ')' ';'

    '('  shift, and go to state 97


State 62

   74 if_statement: TOKEN_IF . expression TOKEN_THEN statement
   75             | TOKEN_IF . expression TOKEN_THEN statement TOKEN_ELSE statement

    '!'          shift, and go to state 98
    '('          shift, and go to state 99
    '-'          shift, and go to state 100
    TOKEN_FALSE  shift, and go to state 101
    TOKEN_NULL   shift, and go to state 102
    TOKEN_TRUE   shift, and go to state 103
    IDENTIFIER   shift, and go to state 68
    CHARACTER    shift, and go to state 104
    INTEGER      shift, and go to state 105

    procedure_expression  go to state 106
    variable_access       go to state 107
    indexed_variable      go to state 81
    expression            go to state 108
    literal               go to state 109


State 63

   59 simple_statement: TOKEN_NEW . '(' variable_access ')' ';'

    '('  shift, and go to state 110


State 64

   69 print_statement: TOKEN_PRINT . '(' expression ')' ';'

    '('  shift, and go to state 111


State 65

   70 print_statement: TOKEN_PRINTLN . '(' expression ')' ';'

    '('  shift, and go to state 112


State 66

   61 simple_statement: TOKEN_RETURN . '(' expression ')' ';'

    '('  shift, and go to state 113


State 67

   76 while_statement: TOKEN_WHILE . expression TOKEN_DO statement

    '!'          shift, and go to state 98
    '('          shift, and go to state 99
    '-'          shift, and go to state 100
    TOKEN_FALSE  shift, and go to state 101
    TOKEN_NULL   shift, and go to state 102
    TOKEN_TRUE   shift, and go to state 103
    IDENTIFIER   shift, and go to state 68
    CHARACTER    shift, and go to state 104
    INTEGER      shift, and go to state 105

    procedure_expression  go to state 106
    variable_access       go to state 107
    indexed_variable      go to state 81
    expression            go to state 114
    literal               go to state 109


State 68

   64 procedure_expression: IDENTIFIER . '(' expression_part ')'
   77 variable_access: IDENTIFIER .

    '('  shift, and go to state 115

    $default  reduce using rule 77 (variable_access)


State 69

   71 structured_statement: block .

    $default  reduce using rule 71 (structured_statement)


State 70

    1 program: type_declaration_part variable_declaration_part procedure_and_function_definition_part TOKEN_BEGIN statement_part . TOKEN_END

    TOKEN_END  shift, and go to state 116


State 71

   51 statement_part: statement_list .
   53 statement_list: statement_list . statement

    TOKEN_BEGIN    shift, and go to state 60
    TOKEN_DISPOSE  shift, and go to state 61
    TOKEN_IF       shift, and go to state 62
    TOKEN_NEW      shift, and go to state 63
    TOKEN_PRINT    shift, and go to state 64
    TOKEN_PRINTLN  shift, and go to state 65
    TOKEN_RETURN   shift, and go to state 66
    TOKEN_WHILE    shift, and go to state 67
    IDENTIFIER     shift, and go to state 68

    $default  reduce using rule 51 (statement_part)

    block                 go to state 69
    statement             go to state 117
    simple_statement      go to state 73
    assignment_statement  go to state 74
    procedure_expression  go to state 75
    print_statement       go to state 76
    structured_statement  go to state 77
    if_statement          go to state 78
    while_statement       go to state 79
    variable_access       go to state 80
    indexed_variable      go to state 81


State 72

   54 statement_list: statement .

    $default  reduce using rule 54 (statement_list)


State 73

   55 statement: simple_statement .

    $default  reduce using rule 55 (statement)


State 74

   57 simple_statement: assignment_statement .

    $default  reduce using rule 57 (simple_statement)


State 75

   58 simple_statement: procedure_expression . ';'

    ';'  shift, and go to state 118


State 76

   62 simple_statement: print_statement .

    $default  reduce using rule 62 (simple_statement)


State 77

   56 statement: structured_statement .

    $default  reduce using rule 56 (statement)


State 78

   72 structured_statement: if_statement .

    $default  reduce using rule 72 (structured_statement)


State 79

   73 structured_statement: while_statement .

    $default  reduce using rule 73 (structured_statement)


State 80

   63 assignment_statement: variable_access . TOKEN_AFF expression ';'
   79 variable_access: variable_access . '^'
   80 indexed_variable: variable_access . '[' expression ']'

    '['        shift, and go to state 119
    '^'        shift, and go to state 120
    TOKEN_AFF  shift, and go to state 121


State 81

   78 variable_access: indexed_variable .

    $default  reduce using rule 78 (variable_access)


State 82

   41 procedure_and_function_definition: procedure_and_function_definition_head variable_declaration_part block .

    $default  reduce using rule 41 (procedure_and_function_definition)


State 83

   25 enumerated_type: '(' enumerated_type_list ')' .

    $default  reduce using rule 25 (enumerated_type)


State 84

   26 enumerated_type_list: enumerated_type_list ',' . enumerated_type_arg

    IDENTIFIER  shift, and go to state 49

    enumerated_type_arg  go to state 122


State 85

   35 range_type: named_type .

    $default  reduce using rule 35 (range_type)


State 86

   34 range_type: subrange_type .

    $default  reduce using rule 34 (range_type)


State 87

   33 array_type: TOKEN_ARRAY '[' range_type . ']' TOKEN_OF type

    ']'  shift, and go to state 123


State 88

   31 constant: IDENTIFIER .

    $default  reduce using rule 31 (constant)


State 89

   29 subrange_type: constant TOKEN_DOTDOT constant .
